--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -7,11 +7,13 @@ services:
     volumes:
       - ./frontend:/app
       - "/app/node_modules"
+    env_file:
+      - ./.env.dev
     ports:
       - 3000:3000
     stdin_open: true
 
-  api:
+  api: # rust graphql server
     build:
       context: ./api
       dockerfile: Dockerfile.dev
@@ -22,9 +24,6 @@ services:
     environment:
       RUST_LOG: info
       DATABASE_URL: postgres://postgres:postgres@db:5432/postgres
-    #   REDIS_URL: redis://cache:6379/
-    #   JWT_SECRET: ITS A SECRET
-    #   ARGON_SECRET: ITS ANOTHER SECRET
     ports:
       - 3535:3535
     depends_on:
@@ -41,10 +40,6 @@ services:
       - ./migrations/up:/docker-entrypoint-initdb.d/
     env_file:
       - ./.env.dev
-    # environment:
-    #   - POSTGRES_DB=postgres
-    #   - POSTGRES_USER=postgres
-    #   - POSTGRES_PASSWORD=postgres
     restart: always
 
   cache:
@@ -52,9 +47,3 @@ services:
     ports:
       - 6379:6379
     restart: always
-
-  adminer:
-    image: adminer
-    restart: always
-    ports:
-      - 8080:8080
