--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@apollo/client": "^3.3.6",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
@@ -15,6 +16,7 @@
     "@types/react-router-dom": "^5.1.6",
     "@types/styled-components": "^5.1.2",
     "@types/throttle-debounce": "^2.1.0",
+    "graphql": "^15.4.0",
     "react": "^16.13.1",
     "react-addons-update": "^15.6.3",
     "react-dom": "^16.13.1",
